--- a/magnolia-module-templating/pom.xml
+++ b/magnolia-module-templating/pom.xml
@@ -44,6 +44,10 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>javax.jcr</groupId>
+      <artifactId>jcr</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
