--- a/pom.xml
+++ b/pom.xml
@@ -266,6 +266,11 @@ for Java Content Repositories (JCR).
         <version>10.3.1.4</version>
       </dependency>
       <dependency>
+        <groupId>concurrent</groupId>
+        <artifactId>concurrent</artifactId>
+        <version>1.3.4</version>
+      </dependency>
+      <dependency>
         <groupId>commons-beanutils</groupId>
         <artifactId>commons-beanutils</artifactId>
         <version>1.7.0</version>
