MAGNOLIA-2526 Json lib update to version 2.3.
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@38717 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -588,7 +588,8 @@ for Java Content Repositories (JCR).
       <dependency>
         <groupId>net.sf.json-lib</groupId>
         <artifactId>json-lib</artifactId>
-        <version>0.9</version>
+        <version>2.3</version>
+        <classifier>jdk15</classifier>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
