--- a/magnolia-module-store-client/pom.xml
+++ b/magnolia-module-store-client/pom.xml
@@ -27,6 +27,8 @@
     <dependency>
        <groupId>net.sf.json-lib</groupId>
        <artifactId>json-lib</artifactId>
+       <version>2.3</version>
+       <classifier>jdk15</classifier>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
