MAGNOLIA-3338 ContextFilter is now configured in web.xml and removed from the magnolia filter chain
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@38952 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,19 @@
   <display-name>magnolia</display-name>
   <distributable/>
   <filter>
+    <display-name>Magnolia context filter</display-name>
+    <filter-name>magnoliaContextFilter</filter-name>
+    <filter-class>info.magnolia.cms.filters.ContextFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>magnoliaContextFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
+    <dispatcher>INCLUDE</dispatcher>
+    <dispatcher>ERROR</dispatcher>
+  </filter-mapping>
+  <filter>
     <display-name>Magnolia global filters</display-name>
     <filter-name>magnoliaFilterChain</filter-name>
     <filter-class>info.magnolia.cms.filters.MgnlMainFilter</filter-class>
