MAGNOLIA-3338: - introduced WebContainerResources class - extracted the former "don't dispatch on forward attribute" to it --> seams to be a step into the right direction, more discussion is needed
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@39430 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -15,6 +15,7 @@ info.magnolia.cms.security.SecuritySupport=/server/security
 info.magnolia.cms.security.IPSecurityManager=info.magnolia.cms.security.IPSecurityManagerImpl$InstanceFactory
 
 info.magnolia.cms.filters.MgnlFilter=info.magnolia.cms.filters.CompositeFilter
+info.magnolia.cms.filters.WebContainerResources=info.magnolia.cms.filters.WebContainerResourcesImpl
 
 info.magnolia.cms.beans.config.VirtualURIManager=info.magnolia.cms.beans.config.VirtualURIManager
 info.magnolia.cms.beans.config.URI2RepositoryManager=/server/URI2RepositoryMapping
