latest dms and released parent pom 18
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@39588 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>info.magnolia</groupId>
     <artifactId>magnolia-parent-pom-ce</artifactId>
-    <version>18-SNAPSHOT</version>
+    <version>18</version>
   </parent>
   <groupId>info.magnolia</groupId>
   <artifactId>magnolia-project</artifactId>
@@ -604,7 +604,7 @@ for Java Content Repositories (JCR).
       </snapshots>
     </repository>
   </repositories>
-  
+
   <modules>
     <module>magnolia-core</module>
     <module>magnolia-jaas</module>
