--- a/magnolia-module-cache/pom.xml
+++ b/magnolia-module-cache/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>magnolia-project</artifactId>
     <groupId>info.magnolia</groupId>
-    <version>4.4-SNAPSHOT</version>
+    <version>4.4-beta1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -25,12 +25,12 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.4-SNAPSHOT</version>
+      <version>4.4-beta1</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-admininterface</artifactId>
-      <version>4.4-SNAPSHOT</version>
+      <version>4.4-beta1</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -63,7 +63,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-core</artifactId>
-      <version>4.4-SNAPSHOT</version>
+      <version>4.4-beta1</version>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
