MAGNOLIA-3434: point repository to nexus instead of old repo.magnolia-cms.com
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@40218 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -593,12 +593,12 @@ for Java Content Repositories (JCR).
     <downloadUrl>http://sourceforge.net/projects/magnolia/files/</downloadUrl>
   </distributionManagement>
 
-  <!-- TODO get rid of this ? -->
+  <!-- TODO we'll have to remove this if we want to sync our repo to central -->
   <repositories>
     <!-- just a little trick for folks who don't have our parent pom in their local repo yet -->
     <repository>
       <id>magnolia</id>
-      <url>http://repo.magnolia-cms.com/m2</url>
+      <url>http://nexus.magnolia-cms.com/content/repositories/magnolia.public.releases/</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
