MAGNOLIA-3451 excluding servlet-api from openwfe, seems to bubble up in certain builds
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.4@40352 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -500,6 +500,10 @@ for Java Content Repositories (JCR).
             <groupId>xerces</groupId>
             <artifactId>xercesImpl</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
