correct scm and documentation urls
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@40696 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@ for Java Content Repositories (JCR).
   <properties>
     <magnoliaEdition>Community Edition</magnoliaEdition>
     <magnoliaLicenseStyle>dual</magnoliaLicenseStyle>
-    <documentationURL>http://documentation.magnolia-cms.com/release/4-4-1.html</documentationURL>
+    <documentationURL>http://documentation.magnolia-cms.com/release/5-0.html</documentationURL>
     <javaVersion>1.5</javaVersion>
   </properties>
   <issueManagement>
@@ -115,9 +115,9 @@ for Java Content Repositories (JCR).
     </contributor>
   </contributors>
   <scm>
-    <connection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/branches/magnolia-4.4</connection>
-    <developerConnection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/branches/magnolia-4.4</developerConnection>
-    <url>http://svn.magnolia-cms.com/view/community/magnolia/branches/magnolia-4.4</url>
+    <connection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/trunk</connection>
+    <developerConnection>scm:svn:http://svn.magnolia-cms.com/svn/community/magnolia/trunk</developerConnection>
+    <url>http://svn.magnolia-cms.com/view/community/magnolia/trunk</url>
   </scm>
   <profiles>
     <profile>
