MAGNOLIA-3522 nastier nested-properties test
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-ioc@41380 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/test/resources/test-magnolia.properties
+++ b/magnolia-core/src/test/resources/test-magnolia.properties
@@ -54,4 +54,4 @@ test.broken1=test 1 ${
 test.broken2=test 2 $
 #do not remove whitespaces here, please :P
 test.whitespaces=   foo
-test.whitespaces.nested=  ${test.whitespaces}
+test.whitespaces.nested=   bar ${test.whitespaces}
