MAGNOLIA-2569 * MgnlServletContextListener instantiates PicoContainers (to be abstracted), populates the root container with the necessary minimal components, populates main container with properties/modules configured component, fires up container and ConfigLoader. * Removed unnecessary properties from mgnl-beans.properties (some are "hardcoded" in the root container at startup, some are not needed anymore), and added some missing ones
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-ioc@41483 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-core/src/main/resources/mgnl-beans.properties
+++ b/magnolia-core/src/main/resources/mgnl-beans.properties
@@ -2,16 +2,18 @@
 # Default implementations or locations for core beans.
 # Modules define their own in their module descriptors.
 #--------------------------------------------
-info.magnolia.context.WebContext=info.magnolia.context.WebContextImpl
-info.magnolia.cms.core.AggregationState=info.magnolia.cms.core.AggregationState
-info.magnolia.context.SystemContext=info.magnolia.context.JCRSessionPerThreadSystemContext
-info.magnolia.module.ModuleManager=info.magnolia.module.ModuleManagerImpl
-info.magnolia.module.ModuleRegistry=info.magnolia.module.ModuleRegistryImpl
+info.magnolia.cms.beans.config.ConfigLoader=info.magnolia.cms.beans.config.ConfigLoader
 
+info.magnolia.context.SystemContext=info.magnolia.context.JCRSessionPerThreadSystemContext
+info.magnolia.context.WebContextFactory=info.magnolia.context.WebContextFactoryImpl
+info.magnolia.cms.util.WorkspaceAccessUtil=info.magnolia.cms.util.WorkspaceAccessUtil
+
+info.magnolia.cms.license.LicenseFileExtractor=info.magnolia.cms.license.LicenseFileExtractor
 info.magnolia.cms.beans.config.ServerConfiguration=info.magnolia.cms.beans.config.ServerConfiguration$InstanceFactory
 info.magnolia.cms.security.SecuritySupport=/server/security
 info.magnolia.cms.security.IPSecurityManager=info.magnolia.cms.security.IPSecurityManagerImpl$InstanceFactory
 
+info.magnolia.cms.filters.FilterManager=info.magnolia.cms.filters.FilterManagerImpl
 info.magnolia.cms.filters.MgnlFilter=info.magnolia.cms.filters.CompositeFilter
 info.magnolia.cms.filters.WebContainerResources=/server/webContainerResources
 
@@ -19,21 +21,19 @@ info.magnolia.cms.beans.config.VirtualURIManager=info.magnolia.cms.beans.config.
 info.magnolia.cms.beans.config.URI2RepositoryManager=/server/URI2RepositoryMapping
 info.magnolia.cms.core.version.VersionManager=info.magnolia.cms.core.version.VersionManager
 info.magnolia.commands.CommandsManager=info.magnolia.commands.CommandsManager
+info.magnolia.commands.CommandTransformer=info.magnolia.commands.CommandTransformer
+
 info.magnolia.cms.beans.config.VersionConfig=info.magnolia.cms.beans.config.VersionConfig
+info.magnolia.cms.beans.config.ShutdownManager=info.magnolia.cms.beans.config.ShutdownManager
 
 info.magnolia.cms.i18n.I18nContentSupport=/server/i18n/content
 info.magnolia.link.LinkTransformerManager=/server/rendering/linkManagement
 
 info.magnolia.cms.exchange.ActivationManager=/server/activation
 
-info.magnolia.content2bean.Content2BeanProcessor=info.magnolia.content2bean.impl.Content2BeanProcessorImpl
-info.magnolia.content2bean.Content2BeanTransformer=info.magnolia.content2bean.impl.Content2BeanTransformerImpl
-info.magnolia.content2bean.Bean2ContentProcessor=info.magnolia.content2bean.Bean2ContentProcessorImpl
-info.magnolia.content2bean.TransformationState=info.magnolia.content2bean.impl.TransformationStateImpl
-info.magnolia.content2bean.TypeMapping=info.magnolia.content2bean.impl.PropertiesBasedTypeMapping
-
 info.magnolia.cms.gui.dialog.ControlsManager=info.magnolia.cms.gui.dialog.ControlsManager
 
+info.magnolia.freemarker.FreemarkerHelper=info.magnolia.freemarker.FreemarkerHelper
 info.magnolia.freemarker.FreemarkerConfig=/server/rendering/freemarker
 
 info.magnolia.voting.Voting = info.magnolia.voting.DefaultVoting
