MAGNOLIA-2569 Renamed info.magnolia.cms.servlets.MgnlServletContextListener to info.magnolia.init.MagnoliaServletContextListener
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-ioc@41493 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-empty-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/magnolia-empty-webapp/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
     <dispatcher>ERROR</dispatcher>
   </filter-mapping>
   <listener>
-    <listener-class>info.magnolia.cms.servlets.MgnlServletContextListener</listener-class>
+    <listener-class>info.magnolia.init.MagnoliaServletContextListener</listener-class>
   </listener>
   <!-- These are the default paths searched for magnolia configuration. Uncomment if you need to customize these.
        Your container might also do its own variables substitution here. Tomcat, for instance, allows you to use
