--- a/pom.xml
+++ b/pom.xml
@@ -225,7 +225,7 @@ for Java Content Repositories (JCR).
       <dependency>
         <groupId>org.apache.jackrabbit</groupId>
         <artifactId>jackrabbit-core</artifactId>
-        <version>1.6.2</version>
+        <version>2.2.1</version>
         <exclusions>
           <exclusion>
             <groupId>commons-logging</groupId>
@@ -237,6 +237,26 @@ for Java Content Repositories (JCR).
             <artifactId>xercesImpl</artifactId>
           </exclusion>
         </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>com.vaadin</groupId>
+        <artifactId>vaadin</artifactId>
+        <version>6.5.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.vaadin.addons</groupId>
+        <artifactId>vaadin-treetable</artifactId>
+        <version>1.1.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.gwt</groupId>
+        <artifactId>gwt-user</artifactId>
+        <version>2.1.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.gwt</groupId>
+        <artifactId>gwt-dev</artifactId>
+        <version>2.1.0</version>
       </dependency>
       <dependency>
         <groupId>org.apache.derby</groupId>
@@ -358,7 +378,7 @@ for Java Content Repositories (JCR).
       <dependency>
         <groupId>javax.jcr</groupId>
         <artifactId>jcr</artifactId>
-        <version>1.0</version>
+        <version>2.0</version>
       </dependency>
       <dependency>
         <groupId>commons-lang</groupId>
@@ -616,6 +636,7 @@ for Java Content Repositories (JCR).
     <module>magnolia-module-exchange-simple</module>
     <module>magnolia-module-fckeditor</module>
     <module>magnolia-module-admininterface</module>
+    <module>magnolia-module-admincentral</module>
     <module>magnolia-module-cache</module>
     <module>magnolia-module-templating-components</module>
     <module>magnolia-taglib-cms</module>
