--- a/pom.xml
+++ b/pom.xml
@@ -571,6 +571,12 @@ for Java Content Repositories (JCR).
         </exclusions>
       </dependency>
       <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.8.2</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
         <groupId>net.sourceforge.openutils</groupId>
         <artifactId>openutils-testing4web</artifactId>
         <version>1.2</version>
