--- a/magnolia-empty-webapp/pom.xml
+++ b/magnolia-empty-webapp/pom.xml
@@ -57,7 +57,7 @@
     <dependency>
       <groupId>info.magnolia</groupId>
       <artifactId>magnolia-module-vaadin</artifactId>
-      <version>${project.version}</version>
+      <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>info.magnolia</groupId>
