--- a/magnolia-module-admincentral/pom.xml
+++ b/magnolia-module-admincentral/pom.xml
@@ -39,6 +39,11 @@
       <version>${project.version}</version>
       </dependency>
     <dependency>
+      <groupId>info.magnolia</groupId>
+      <artifactId>magnolia-module-vaadin</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
