MAGNOLIA-3549: - base framework - use blackboard as event bus
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@41954 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-vaadin/pom.xml
+++ b/magnolia-module-vaadin/pom.xml
@@ -25,6 +25,11 @@
       <artifactId>vaadin</artifactId>
     </dependency>
     <dependency>
+		<groupId>org.vaadin.addons</groupId>
+		<artifactId>blackboard</artifactId>
+		<version>2.1.1</version>
+	</dependency>
+    <dependency>
       <groupId>org.vaadin.addons</groupId>
       <artifactId>vaadin-treetable</artifactId>
     </dependency>
