--- a/magnolia-module-vaadin/pom.xml
+++ b/magnolia-module-vaadin/pom.xml
@@ -33,6 +33,11 @@
       <groupId>org.vaadin.addons</groupId>
       <artifactId>vaadin-treetable</artifactId>
     </dependency>
+    <dependency>
+	  <groupId>org.vaadin.addons</groupId>
+	  <artifactId>confirmdialog</artifactId>
+	  <version>1.1.0</version>
+     </dependency>
      <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>servlet-api</artifactId>
