--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,11 @@ for Java Content Repositories (JCR).
         <version>1.1.0</version>
       </dependency>
       <dependency>
+	    <groupId>org.vaadin.addons</groupId>
+	    <artifactId>confirmdialog</artifactId>
+	    <version>1.1.0</version>
+      </dependency>
+      <dependency>
         <groupId>com.google.gwt</groupId>
         <artifactId>gwt-user</artifactId>
         <version>2.1.1</version>
