MAGNOLIA-3546: first iteration - introduced the event bus - events dispatch to the corresponding handler - dropped the blackboard add-on
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@42353 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-vaadin/pom.xml
+++ b/magnolia-module-vaadin/pom.xml
@@ -25,10 +25,9 @@
       <artifactId>vaadin</artifactId>
     </dependency>
     <dependency>
-		<groupId>org.vaadin.addons</groupId>
-		<artifactId>blackboard</artifactId>
-		<version>2.1.1</version>
-	</dependency>
+      <groupId>com.google.collections</groupId>
+	  <artifactId>google-collections</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.vaadin.addons</groupId>
       <artifactId>vaadin-treetable</artifactId>
