--- a/pom.xml
+++ b/pom.xml
@@ -275,6 +275,11 @@ for Java Content Repositories (JCR).
         <version>2.1.1</version>
       </dependency>
       <dependency>
+        <groupId>com.google.collections</groupId>
+        <artifactId>google-collections</artifactId>
+        <version>1.0</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.derby</groupId>
         <artifactId>derby</artifactId>
         <version>10.3.1.4</version>
