MAGNOLIA-3565: - fire the fragment on startup if not empty
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@42376 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-vaadin/pom.xml
+++ b/magnolia-module-vaadin/pom.xml
@@ -84,6 +84,7 @@
           <module>info.magnolia.module.vaadin.widgetsets.MagnoliaWidgetset</module>
           <!-- <draftCompile>true</draftCompile> -->
           <!-- <style>PRETTY</style> -->
+          <runTarget>.magnolia/admin-central</runTarget>
         </configuration>
         <executions>
           <execution>
